k8s/seleniumhub/hub/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub-develop
  labels:
    app: selenium-hub-develop
spec:
  selector:
    matchLabels:
      app: selenium-hub-develop
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: selenium-hub-develop
    spec:
      containers:
        - name: selenium-hub
          image: nexus-registry.codikup-qa.com/admin/registry-default/selenium/hub:latest
          ports:
            - containerPort: 4442
            - containerPort: 4443
            - containerPort: 4444
          resources:
            requests:
              memory: "100Mi"
            limits:
              memory: "200Mi"
      imagePullSecrets:
        - name: registry-default
      nodeSelector:
        tier: develop
