k8s/seleniumhub/hub/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub-service
spec:
  selector:
    app: selenium-hub-develop
  ports:
    - name: http1
      protocol: TCP
      port: 4442
      targetPort: 4442
    - name: http2
      protocol: TCP
      port: 4443
      targetPort: 4443
    - name: http3
      protocol: TCP
      port: 80
      targetPort: 4444
    - name: vnc
      protocol: TCP
      port: 7900
      targetPort: 7900
