k8s/seleniumhub/hub/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "NAME_APP.NAMESPACE.k8s-dev.codikup-qa.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            - name: selenium-hub-service
              port:
                - name: http1
                  number: 80
                - name: http2
                  number: 7900
